openshift/openshiftstack/application/kserve/overlays/servicemesh/network_policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traffic-to-kserve
  namespace: kubeflow
spec:
  podSelector:
    matchLabels:
      app: 'kserve'
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
  policyTypes:
    - Ingress
